--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/runtime": "^7.17.7",
-        "NeteaseCloudMusicApi": "^4.8.2",
         "antd": "^4.23.6",
         "axios": "^0.26.1",
         "classnames": "^2.3.1",
         "connect-multiparty": "^2.2.0",
         "core-js": "^3.21.1",
+        "crypto-js": "^4.1.1",
         "dayjs": "^1.11.5",
         "immer": "^9.0.15",
+        "NeteaseCloudMusicApi": "^4.8.2",
         "ramda": "^0.28.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
